<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNew"
    android:orientation="vertical">
    <android.support.design.widget.AppBarLayout
        android:layout_gravity="top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <TextView
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:id="@+id/dat"
            android:text="Register as Donar"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="#FFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        >

    <LinearLayout
            android:padding="8dp"
            android:orientation="vertical"
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp">


        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_registration"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textIsSelectable="true"
            android:layout_marginBottom="@dimen/m_b"
            android:layout_marginTop="@dimen/m_t"
            android:textSize="@dimen/size" />

        <TextView
            android:id="@+id/lbl1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="10dp"
            android:elevation="1dp"
            android:text="@string/personal_details" />

        <EditText
            android:id="@+id/givenname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/given_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/surname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/surname"
            android:inputType="textPersonName" />






<EditText
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/date_of_birth_dd_mm_yyyy"
                android:inputType="date"
                android:layout_marginRight="20dp"
                />



        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/gender">

            <RadioButton
                android:id="@+id/maleradio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:duplicateParentState="false"
                android:checked="true"
                android:text="@string/gender_male" />

            <RadioButton
                android:id="@+id/femaleradio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Female" />

            <RadioButton
                android:id="@+id/otherradio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="Other" />
        </RadioGroup>

        <Spinner
            android:id="@+id/bloodgroup"
            android:entries="@array/blood"
            android:textColor="#a9189d"
            android:background="@drawable/textbox"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Phone Number"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Email (someone@example.com)"
            android:inputType="textEmailAddress" />

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="20dp"
            android:text="User Address" />

        <EditText
            android:id="@+id/streetname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Street Name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/suburb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Suburb"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/city"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="City"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/postcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Pin"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/lbl2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="Login Details" />

        <EditText
            android:id="@+id/loginname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Username"
            android:inputType="textPersonName" />
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Set Password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/confirmpass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="Confirm Password"
            android:inputType="textPassword" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Enlist as donor" />

        <TextView
            android:id="@+id/formErrors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/register"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:layout_gravity="right"
            android:background="@android:color/holo_red_dark"
            android:text="Register"
            />

        </LinearLayout>




    </ScrollView>

</LinearLayout>
